Fix bug: instructor/class review modals not showing correct data

--- a/public/stylesheets/reviews.css
+++ b/public/stylesheets/reviews.css
@@ -267,7 +267,6 @@
 .success-heading {
     height: 160px;
     padding-top: 20px;
-    padding-left: 15px;
     font-weight: 200;
     text-align: center;
     margin: 10px;
